--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>element-ui-demo</title>
+    <script src="//unpkg.com/vue@2.5.17/dist/vue.runtime.min.js"></script>
+    <script src="//unpkg.com/vuex@3.0.1/dist/vuex.min.js"></script>
+    <script src="//unpkg.com/vue-router@3.0.1/dist/vue-router.min.js"></script>
+    <script src="//unpkg.com/element-ui@2.4.10/lib/index.js"></script>
+    <script src="//unpkg.com/axios@0.18.0/dist/axios.min.js"></script>
+    <script src="//unpkg.com/vue-echarts@3.1.3/dist/vue-echarts.js"></script>
   </head>
   <body>
     <noscript>
